# ray-tracer-challenge

./: .gitignore  CMakeLists.txt  README.md
application/: CMakeLists.txt  tick.cpp
character/: CMakeLists.txt
character/include/: Character.h
character/src/: Character.cpp
character/tests/: CharacterTest.cpp
libraries/: CMakeLists.txt
libraries/canvas/: CMakeLists.txt
libraries/canvas/include/: canvas.h
libraries/canvas/src/: canvas.cpp
libraries/matrix/: CMakeLists.txt
libraries/matrix/include/: matrix.h
libraries/matrix/src/: matrix.cpp
libraries/tuple/: CMakeLists.txt
libraries/tuple/include/: color.h  point.h  tuple.h  vector.h
libraries/tuple/src/: color.cpp  point.cpp  tuple.cpp  vector.cpp
libraries/tuple/test/: colorTest.cpp  main.cpp  tupleMathTest.cpp  tupleTest.cpp  vectorMathTest.cpp
libraries/tuples/: CMakeLists.txt
libraries/tuples/include/: point.h  tuples.h  vector.h
libraries/tuples/src/: point.cpp  tuples.cpp  vector.cpp
libraries/tuples/tests/: tuplesTest.cpp
test/: CMakeLists.txt
test/canvas/: CMakeLists.txt  canvasTest.cpp
test/matrix/: CMakeLists.txt  matrixtest.cpp
test/tuple/: CMakeLists.txt  colorTest.cpp  tupleMathTest.cpp  vectorMathTest.cpp
